--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "is-ci || husky install"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "@nuxt/content": "^1.15.1",
     "@nuxt/image": "^0.7.1",
     "@nuxtjs/axios": "^5.13.6",
